--- a/frontend/html/texttags.html
+++ b/frontend/html/texttags.html
@@ -3,8 +3,38 @@
         <link rel="stylesheet" href="/css/index.css" />
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" />
     </head>
-    <body>
-        welcome to my resume
+    <body  style ="border-style:solid;color: black;margin-left: 220px;margin-right: 220px;margin-top: 50px;">
+        <h1 style ="text-align: center; color: black; margin-top: 15px;">RESUME</h1>
+        <h2 style ="font-size: larger; text-align: left;margin-left: 20px;">  NAME       : A Aravind reddy </h2>
+          <h3 style ="font-size: larger; text-align: left;margin-left: 20px" >EMAIL      : Aravindreddy1572@gmail.com</h3>
+              <h4 style ="font-size: larger; text-align: left;margin-left: 20px">CONTACT    :9866460287 </h4>
+              <h5 style=" margin-left: 20px; background-color:lightseagreen;">   EDUCATIONAL QUALIFICATION</h5>
+              <p style =" margin-bottom: 1px; margin-left: 60px;"> B.TECH             :- CMR College Of Engineering & Technology</p>
+              <p style = "margin-bottom: 1px;margin-left: 60px;">   INTERMEDIATE :- Sri Chaitanya </p>
+              <p style = "margin-bottom: 1px;margin-left: 65px;"> percentage :- 95</p>
+              <p style ="margin-bottom: 1px;margin-left: 60px;">   HIGH SCHOOL:- sri chaitanya </p>
+              <p style ="margin-left: 65px;">  GPA    :-10/10</p>
+              <h5 style=" margin-left: 20px;background-color:lightseagreen;"> ACCOMPLISHMENTS</h6>
+              <p style =" margin-bottom: 1px; margin-left: 60px;"> Gold medal in INTSO MATHSall india wide </p>
+              <p style =" margin-bottom: 1px; margin-left: 60px;">  </p>
+              <p style =" margin-left: 60px;"> Gold medal in INTSO APTITUDE all india wide </p>
+
+
+              <h5 style=" margin-left: 20px;background-color:lightseagreen;"> TECHINCAL SKILLS</h6>
+              <p style =" margin-bottom: 1px; margin-left: 60px;">  languages  known</p>
+              <p style = "margin-bottom: 1px;margin-left: 65px;"> C</p>
+              <p style = "margin-bottom: 1px;margin-left: 65px;"> C++</p>
+              <p style = "margin-left: 65px;"> java</p>
+              <h5 style=" margin-left: 20px;background-color:lightseagreen"> HOBBIES</h6>
+              <p style = "margin-bottom: 1px;margin-left: 65px;"> reading books</p>
+              <p style = "margin-bottom: 1px;margin-left: 65px;"> mobile games</p>
+              <p style =" margin-left: 60px;"> playing cricket </p>
+              <h5 style=" margin-left: 20px;background-color:lightseagreen;"> STRENGTHS</h6>
+              <p style = "margin-bottom: 1px;margin-left: 65px;"> dedication and determination </p>
+
+              
+
+
        
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
