--- a/frontend/html/texttags.html
+++ b/frontend/html/texttags.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-        <link rel="stylesheet" href="/css/index.css" />
+        <link rel="stylesheet" href="/frontend/css/index.css" />
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" />
     </head>
-    <body  style ="border-style:solid;color: black;margin-left: 220px;margin-right: 220px;margin-top: 50px;">
+    <body  style ="border-style:solid;color: black;margin-left: 220px;margin-right: 220px;margin-top: 50px;margin-bottom: 50px;">
         <h1 style ="text-align: center; color: black; margin-top: 15px;">RESUME</h1>
         <h2 style ="font-size: larger; text-align: left;margin-left: 20px;">  NAME       : A Aravind reddy </h2>
           <h3 style ="font-size: larger; text-align: left;margin-left: 20px" >EMAIL      : Aravindreddy1572@gmail.com</h3>
