--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -10,5 +10,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="/js/index.js"></script>
         <a href="\texttags">click to proceed</a>
+        <a href="\texttags">back</a>
     </body>
 </html> 
