--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -9,7 +9,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="/js/index.js"></script>
-        <a href="\texttags">click to proceed</a><a href ="\frontend\html\index.html">back </a>
+        <a href="\texttags">click to proceed</a>
     
     </body>
 </html> 
