--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         welcome 
+        <canvas id = "canvas" width="200" height="100"></canvas>
        
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
