--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -12,6 +12,6 @@
         <script src="/js/index.js"></script>
         <a href="\texttags">click to proceed</a>
         <br>
-        <canvas id = "canvas" width="100" height="100" style="border: 1px solid black;color: chartreuse; "></canvas>
+        <canvas id = "canvas" width="100" height="100" style="border: 1px solid black;background-color: chartreuse; "></canvas>
     </body>
 </html> 
