--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -10,8 +10,10 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="/js/index.js"></script>
-        <a href="\texttags">click to proceed</a>
+        
+        <a href="\texttags">resume</a>
+        <a href="\clock">go to clock</a>
         <br>
-        <canvas id = "canvas" width="100" height="100" style="border: 1px solid black;background-color: chartreuse; "></canvas>
+        
     </body>
 </html> 
