--- a/frontend/html/clock.html
+++ b/frontend/html/clock.html
@@ -86,6 +86,7 @@ function drawHand(ctx, pos, length, width) {
     ctx.rotate(-pos);
 }
 </script>
+<a href="/"> to homepage</a>
 
 </body>
 </html>
