--- a/frontend/html/texttags.html
+++ b/frontend/html/texttags.html
@@ -39,6 +39,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="/js/index.js"></script>
-        <a href ="\">back  to home change</a>
-    </body>
-</html> 
+        <a href="/"> back to home page</a>
+        
+        <html>
