--- a/frontend/html/texttags.html
+++ b/frontend/html/texttags.html
@@ -29,7 +29,7 @@
               <p style = "margin-bottom: 1px;margin-left: 65px;"> reading books</p>
               <p style = "margin-bottom: 1px;margin-left: 65px;"> mobile games</p>
               <p style =" margin-left: 60px;"> playing cricket </p>
-              <h5 style=" margin-left: 20px;background-color:grey;"> STRENGTHS</h6>
+              <h5 style=" margin-left: 20px;background-color:lightseagreen;"> STRENGTHS</h6>
               <p style = "margin-bottom: 1px;margin-left: 65px;"> dedication and determination </p>
 
               
