--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -3,7 +3,7 @@
         <link rel="stylesheet" href="/css/index.css" />
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" />
     </head>
-    <body style="margin-left:200px;">
+    <body style="margin-left:400px;margin-top: 100px;">
         welcome 
         
        
