--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -12,9 +12,9 @@
         <script src="/js/index.js"></script>
 
         <br>
-        <a href="\texttags">RESUME</a>
+        <a href="\texttags"> click here to  :RESUME</a>
         <br>
-        <a href="\clock">CLOCK</a>
+        <a href="\clock"> click here to  :CLOCK</a>
         <br>
         
     </body>
