--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -16,6 +16,8 @@
         <br>
         <a href="\clock"> click here to  :CLOCK</a>
         <br>
+        <a href="\tambola"> click here to  :TAMBOLA</a>
+        <br>
         
     </body>
 </html> 
