script tambo;la

--- a/frontend/html/tambola.html
+++ b/frontend/html/tambola.html
@@ -3,6 +3,7 @@
 
     </head>
     <body>
+        <script>
         var array = new Array();
         var array2= new Array();
         var prenum="";
@@ -69,6 +70,6 @@
             boardhtml += "</table>";
             document.getElementById('board').innerHTML=boardhtml;
         }
-        recreatetable(0);
+        recreatetable(0);</script>
     </body>
 </html>
