--- a/frontend/html/tambola.html
+++ b/frontend/html/tambola.html
@@ -1,7 +1,7 @@
 <html>
    <head></head>
    <body>
-         <h1><center> TAMBOLA BOARD </center></h1>
+         <h1><center> TAMBOLA  </center></h1>
          <table width="60%">
            <tr>
              <td>
@@ -14,9 +14,9 @@
          <table width="60%">
               <tr><h1><td align="center"><font size="30"><div id="number"></div></font></td></tr></h1>
               <tr><td align=center>
-              <input type="button" name="next" value="NEXT NUMBER" onClick="generatenum();">Click to Generate Next Number</input>
+              <input type="button" name="next" value="NEW NUMBER" onClick="generatenum();">Click this to proceed to number</input>
               </td></tr><tr><td>
-              <input type="button" name="Reset" value="RESET GAME" onClick="clearn();"> Refreshing the Page wont start a new game - Click this button to Start a New Game</input>
+              <input type="button" name="Reset" value="NEW GAME" onClick="clearn();"> Refreshing the Page wont start a new game - Click this button to Start a New Game</input>
               </td></tr>
           </table>
 
