--- a/frontend/html/tambola.html
+++ b/frontend/html/tambola.html
@@ -7,7 +7,7 @@
              <td>
                <div id="board"></div>
              </td>
-             <td align="left">Previous Call</td>
+             <td align="left">PREVIOUS NUMBER</td>
              <td align="right"><font size="20"><div id="prenumber"> </div></font></td>
             </tr>
          </table><br><br>
